# ssh-mgmt-toolkit

./: Cargo.toml  README.md
centric-api/: Cargo.toml  LICENSE  README.md  Rocket.toml  diesel.toml  tests.ipynb
centric-api/migrations/2023-04-04-141736_create_nodes/: down.sql  up.sql
centric-api/migrations/2023-04-06-141103_create_users/: up.sql
centric-api/migrations/2023-04-06-142323_create_services/: down.sql  up.sql
centric-api/migrations/2023-04-06-142641_create_sells/: down.sql  up.sql
centric-api/migrations/2023-05-07-163420_logins/: down.sql  up.sql
centric-api/src/: lib.rs  main.rs  models.rs  node_models.rs  schema.rs  token.rs
node-api/: Cargo.toml  README.md  config_sample.json  tests.ipynb
node-api/src/: lib.rs  main.rs  models.rs  stats.rs  users.rs
